<resources>
    <string name="app_name">Local Ink</string>
    <string name="wishlist">Wishlist</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add_a_book">Add a book</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="register_as_a_reader">Register as a Reader</string>
    <string name="wishlist_title">Wishlist:</string>
    <string name="preferences">Preferences</string>
    <string name="change_image">Change Image</string>
    <string name="age_range">Age Range</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="sign_up_as_a_reader">Sign up as a reader</string>
    <string name="sign_up_as_a_bookstore">Sign up as a bookstore</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_as_a_bookstore">Register as a Bookstore</string>
    <string name="street_address">Street address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="name">Name</string>
    <string name="bookstore_name">Bookstore name</string>
    <string name="create_book">Create Book</string>
    <string name="put_a_new_book_on_your_bookshelf">Put a new book on your bookshelf</string>
    <string name="synopsis">Synopsis</string>
    <string name="cover">Cover URL</string>
    <string name="address">Address</string>
    <string name="bookstore_profile_image">Bookstore profile image</string>
    <string name="user_profile_image">User profile image</string>
    <string name="log_in">Log In</string>
    <string name="book_cover">Book cover</string>
    <string name="log_out">Log out</string>
    <string name="state">State</string>
    <string name="isbn">ISBN</string>
    <string name="recommendations_settings">Recommendations Settings</string>
    <string name="number_of_stores_near_you_to_recommend_books_from">How many stores near you should we search for books from?</string>
    <string name="save">Save</string>
    <string name="what_is_the_maximum_distance_from_you">What is the maximum radius (in miles) from you that we should search for books/bookstores?</string>
    <string name="recommendations">Recommendations</string>
    <string name="get_more_books_snackbar">No more perfect matches. Explore other books you may like?</string>
    <string name="get_more_books_snackbar_action">Show</string>
    <string name="search_by_isbn">Find book by ISBN</string>
    <string name="enter_book_information_manually">Enter book information manually:</string>
    <string name="map">Map View</string>
    <string name="search">Search</string>
    <string name="search_for_a_book">Search for a book</string>
    <string name="website">Website URL</string>
    <string name="website_url">Website URL</string>
    <string name="channel_name" type="id">Local Ink notification channel</string>
    <string name="channel_description">Local Ink notifications</string>

</resources>