<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddBookFragment">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/put_a_new_book_on_your_bookshelf"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@+id/tvHeader"
        android:hint="@string/title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@+id/etTitle"
        android:hint="@string/author" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etSynopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@+id/etAuthor"
        android:hint="@string/synopsis" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@+id/etSynopsis"
        android:hint="@string/cover"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@+id/etCover"
        android:hint="@string/genre"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etAgeRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@+id/etGenre"
        android:hint="@string/age_range"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_book"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>