<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterReaderActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etUsername"
        android:layout_below="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:paddingTop="16dp"
        android:text="@string/preferences"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPreferences"
        android:text="@string/genre"
        android:textSize="16sp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/spnrGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvGenre"
        android:layout_toEndOf="@+id/tvGenre"
        android:entries="@array/genres_array"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAgeRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_range"
        android:textSize="16sp"
        android:layout_below="@+id/tvGenre"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/spnrAgeRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvAgeRange"
        android:layout_toEndOf="@+id/tvAgeRange"
        android:layout_below="@+id/spnrGenre"
        android:entries="@array/age_ranges_array"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnrAgeRange"
        android:text="@string/register_as_a_reader"
        android:layout_margin="16dp"/>

</RelativeLayout>