<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBookstoreProfileActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/bookstore_profile_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangeProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfileImage"
        android:text="@string/change_image"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChangeProfileImage"
        android:hint="@string/name"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etStreetAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street_address"
        android:layout_below="@id/etName"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_below="@id/etStreetAddress"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip_code"
        android:layout_below="@id/etCity"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_baseline_done_24"
        app:useCompatPadding="true"/>
</RelativeLayout>