<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/tvRecSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/recommendations_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tvNumStores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRecSettings"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="16dp"
        android:text="@string/number_of_stores_near_you_to_recommend_books_from" />

    <LinearLayout
        android:id="@+id/llSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvNumStores">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:max="25"/>

        <TextView
            android:id="@+id/tvSeekBarValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llSeekBar"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:layout_margin="16dp"
        app:icon="@drawable/ic_baseline_done_24"/>


</RelativeLayout>