<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.BookstoreProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        app:menu="@menu/menu_profile"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:layout_below="@id/toolbar"
        android:elevation="10dp"
        app:cardCornerRadius="80dp"
        app:cardElevation="10dp">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_baseline_person_24"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/bookstore_profile_image"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cvProfile"
        android:text="@string/bookstore_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:text="@string/address"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWebsite"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        tools:text="Website"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_baseline_edit_24"
        app:useCompatPadding="true"
        app:backgroundTint="@color/colorAccent"/>


</RelativeLayout>